--- a/src/app/modules/benefit/add-benefit/add-benefit.component.html
+++ b/src/app/modules/benefit/add-benefit/add-benefit.component.html
@@ -6,7 +6,8 @@
 
 <nb-card>
     <nb-card-body>
-
+        <span> back <i class="fas fa-arrow-circle-left" style="background-color: azure;padding: 0.4rem;"
+            (click)="back()"></i></span>
         <div class="main-page-container">
             <h4>Initiate New Benefit</h4>
             <p>Let's help create a new benefit plan</p>
@@ -38,7 +39,6 @@
                     </div>
 
 
-
                 </div>
 
                 <div class="form-group">
@@ -66,12 +66,13 @@
                     </div>
                 </div>
 
+               
                 <div class="form-group">
                     <div>
                         <label for=""> Add Employee</label>
                     </div>
 
-                    <nb-radio-group [(value)]="selectedOption">
+                    <nb-radio-group [(value)]="selectedOption" class="d-flex">
                         <nb-radio value="1">Individual</nb-radio>
                         <nb-radio value="2">Bulk upload</nb-radio>
                         <nb-radio value="3">Eligibility list</nb-radio>
@@ -88,16 +89,7 @@
 
 
 
-                <div class="form-group">
-                    <label>Upload Employee CSV file</label>
-                    <ngx-file-upload></ngx-file-upload>
-                </div>
 
-                <div class="form-group">
-                    <label>Benefit Icon</label>
-                    <ngx-file-upload></ngx-file-upload>
-                    <span>Icon should be in JPEG format</span>
-                </div>
                 <div *ngIf="selectedOption == 1">
                     <div class="form-group">
                         <!-- <label>Employee</label>
@@ -112,6 +104,21 @@
                     </div>
                 </div>
 
+                <div *ngIf="selectedOption == 3">
+                    <div class="form-group">
+                        <label>eligibility</label>
+                        <select placeholder="Select Gender" class="form-control" name="bucketId" id="bucketId"
+                            #bucketId="ngModel" [(ngModel)]=" benefit.bucketId">
+                            <option value="">--Select eligibility---</option>
+                            <option *ngFor="let v of allEligibilities" [value]="v.id">{{v.text}}</option>
+                        </select>
+
+                        <div *ngIf="bucketId.invalid && (bucketId.dirty || bucketId.touched)" class="error">
+                            <div *ngIf="bucketId.errors.required">eligibility  is required</div>
+                        </div>
+
+                    </div>
+                </div> 
 
 
 
@@ -126,6 +133,19 @@
                 </div>
 
 
+                <div *ngIf="selectedOption == 2">
+
+                    <div class="form-group">
+                        <label>Upload Employee CSV file</label>
+                        <ngx-file-upload></ngx-file-upload>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Benefit Icon</label>
+                        <ngx-file-upload></ngx-file-upload>
+                        <span>Icon should be in JPEG format</span>
+                    </div>
+                </div>
 
                 <!-- <div class="form-group">
                     <label>Employee</label>
