--- a/src/app/modules/disciplinary-management/pages/disciplinary-management-log/disciplinary-management-log.component.html
+++ b/src/app/modules/disciplinary-management/pages/disciplinary-management-log/disciplinary-management-log.component.html
@@ -8,16 +8,14 @@
   <ngx-tableheader *ngIf="!showEmpty"></ngx-tableheader
   ><ngx-default-content
     *ngIf="showEmpty"
-    pageHeader="Create your first Cycle"
-    pageDescription="Click on the button to create a performance cycle"
-    buttonValue="Create Cycle"
-    (buttonClick)="createNewClicked()"
+    [pageHeader]="pageName"
+    pageDescription="No Record Found"
   >
   </ngx-default-content>
   <ngx-tablecomponent
     *ngIf="!showEmpty"
     [tableColum]="tableColumns"
-    [userData]="tableData"
+    [userData]="DisciplineManagementList"
     [loading]="loading"
     (pageChange)="loadNewPage($event)"
   ></ngx-tablecomponent>
